# demo

./: README.md  build-config.h.in  meson.build
include/linkmanager/: module_registry.h
include/linkmanager/api/: modules.h
include/linkmanager/api/modules/: device.h  link.h  module.h  plugin.h
lib/: meson.build  module_registry.cpp
src/: Em919xManagementClassHelper.h  commands.cpp  commands.h  em919xManagement.h  main.cpp  meson.build  options.h
src/command/: connection_manager.cpp  connection_manager.h  daemon.cpp  daemon.h  lsmod.cpp  lsmod.h
src/common/: common.h  dev_util.c  dev_util.h  displaysettings.c  lite-qmi-demo.h  netlink_util.c  netlink_util.h  ping.c  ping.h  str_util.c  switype_256bit.c  switype_256bit.h  sysinfo.c  sysinfo.h
src/lite-mbim/: MbimLogging.h  MbimSyncObject.h  MbimTransaction.h  MbimTransport.h
subprojects/: liberate.wrap  spdlog.wrap
test/: config_test.json  meson.build  module.cpp  module_registry.cpp  plugin.cpp  runner.cpp
test/common/: common.mak  displaysettings.h  proc_util.c  proc_util.h  qmerrno.h  str_util.h  structurecheck.h
test/lite-mbim/: BasicConnectDeviceService.h  MbimIndicator.h
